syntax = "proto3";
package GrpcOrder;

option go_package = "./;GrpcOrder";

import "google/protobuf/timestamp.proto";
import "proto/utils.proto";

message OrderKey {
  int64 id = 1;
  string symbol = 2;
  string side = 3;
  bytes uuid = 4;
  GrpcUtils.Decimal price = 5;
  GrpcUtils.Decimal stop_price = 6;
  bool fake = 7;
  google.protobuf.Timestamp created_at = 8;
}

message Order {
  int64 id = 1;
  bytes uuid = 2;
  int64 member_id = 3;
  string symbol = 4;
  string side = 5;
  string type = 6;
  GrpcUtils.Decimal price = 7;
  GrpcUtils.Decimal stop_price = 8;
  GrpcUtils.Decimal quantity = 9;
  GrpcUtils.Decimal filled_quantity = 10;
  bool fake = 11;
  bool cancelled = 12;
  google.protobuf.Timestamp created_at = 13;
}
